// Copyright (c) 2020 Arista Networks, Inc.
// Use of this source code is governed by the Mozilla Public License Version 2.0
// that can be found in the LICENSE file.
//
// Code generated by boomtown. DO NOT EDIT.
//

syntax = "proto3";

package arista.clouddeploy.v1;
option go_package = "github.com/terraform-providers/terraform-provider-cloudeos/cloudeos/internal/api/clouddeploy_v1;clouddeploy_v1";

import "github.com/aristanetworks/cloudvision-go/api/arista/subscriptions"
import "github.com/aristanetworks/cloudvision-go/api/arista/time"
import "github.com/terraform-providers/terraform-provider-cloudeos/cloudeos/internal/clouddeploy_awsvpn.proto"
import "google/protobuf/timestamp.proto";

message AWSVpnConfigRequest {
	// Key uniquely identifies a AWSVpnConfig instance to retrieve.
	// This value must be populated.
	AWSVpnKey key = 1;

	// Time indicates the time for which you are interested in the data.
	// If no time is given, the server will use the time at twhich it makes the request.
	google.protobuf.Timestamp time = 2;
};

message AWSVpnConfigResponse {
	// Value is the value requested.
	// This structure will be fully-populated as it exists in the datastore. If
	// optional fields were not given at creation, these fields will be empty or
	// set to default values.
	AWSVpnConfig value = 1;

	// Time carries the (UTC) timestamp of the last-modification of the
	// AWSVpnConfig instance in this response.
	google.protobuf.Timestamp time = 2;
};

message AWSVpnConfigStreamRequest {
	// PartialEqFilter provides a way to server-side filter a GetAll/Subscribe.
	// This requires all provided fields to be equal to the response.
	//
	// While transparent to users, this field also allows services to optimize internal
	// subscriptions if filter(s) are sufficiently specific.
	repeated AWSVpnConfig partial_eq_filter = 1;

	// TimeRange allows limiting response data to within a specified time window.
	// If this field is populated, at least one of the two time fields are required.
	//
	// This field is not allowed in the Subscribe RPC.
	arista.time.TimeBounds time = 3;
};

message AWSVpnConfigStreamResponse {
	// Value is a value deemed relevant to the initiating request.
	// This structure will always have its key-field populated. Which other fields are
	// populated, and why, depends on the value of Operation and what triggered this notification.
	AWSVpnConfig value = 1;

	// Time holds the timestamp of this AWSVpnConfig's last modification.
	google.protobuf.Timestamp time = 2;

	// Operation indicates how the AWSVpnConfig value in this response should be considered.
	// Under non-subscribe requests, this value should always be INITIAL. In a subscription,
	// once all initial data is streamed and the client begins to receive modification updates,
	// you should not see INITIAL again.
	arista.subscriptions.Operation type = 3;
};

message AWSVpnConfigSetRequest {
	// AWSVpnConfig carries the value to set into the datastore.
	// See the documentation on the AWSVpnConfig struct for which fields are required.
	AWSVpnConfig value = 1;
};

message AWSVpnConfigSetResponse {
	// Value carries all the values given in the AWSVpnConfigSetRequest as well
	// as any server-generated values.
	AWSVpnConfig value = 1;

	// Time indicates the (UTC) timestamp at which the system recognizes the
	// creation. The only guarantees made about this timestamp are:
	//
	//    - it is after the time the request was received
	//    - a time-ranged query with StartTime==CreatedAt will include this instance.
	//
	google.protobuf.Timestamp time = 2;
};

message AWSVpnConfigDeleteRequest {
	// Key indicates which AWSVpnConfig instance to remove.
	// This field must always be set.
	AWSVpnKey key = 1;
};

message AWSVpnConfigDeleteResponse {
	// Key echoes back the key of the deleted AWSVpnConfig instance.
	AWSVpnKey key = 1;

	// Time indicates the (UTC) timestamp at which the system recognizes the
	// deletion. The only guarantees made about this timestamp are:
	//
	//    - it is after the time the request was received
	//    - a time-ranged query with StartTime==DeletedAt will not include this instance.
	//
	google.protobuf.Timestamp time = 2;
};

service AWSVpnConfigService {
	rpc GetOne (AWSVpnConfigRequest) returns (AWSVpnConfigResponse);
	rpc GetAll (AWSVpnConfigStreamRequest) returns (stream AWSVpnConfigStreamResponse);
	rpc Subscribe (AWSVpnConfigStreamRequest) returns (stream AWSVpnConfigStreamResponse);
	rpc Set (AWSVpnConfigSetRequest) returns (AWSVpnConfigSetResponse);
	rpc Delete (AWSVpnConfigDeleteRequest) returns (AWSVpnConfigDeleteResponse);
}
